Рефакторинг страницы home-page. В загружены картинки в основной контент сайта

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,16 @@
         <!-- Шапка сайта-->
         <header class="header header--theme-home-page">
             <!-- Фон для шапки сайта-->
-            <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page"><img src="../img/header-home-920px.jpg" width="920px" height="826px" alt="head banner"></div>
+            <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page">
+                <div class="header__bg header__bg--theme-head-banner-left-part"></div>
+            </div>
             <div class="header__bg header__bg-inner header__bg--theme-dark-grey header__bg--height-home-page header__bg--part-right"></div>
             <!-- Контент для шапки-->
             <div class="header__content header__content-inner">
                 <!--Фон в контенте шапки-->
-                <div class="header__content-bg header__content-bg-inner header__content-bg__theme-transparent header__content-bg--height-home-page"></div>
+                <div class="header__content-bg header__content-bg-inner header__content-bg__theme-transparent header__content-bg--height-home-page">
+                    <div class="header__bg header__bg--theme-head-banner"></div>
+                </div>
                 <!--Контейнер в контенте шапки для содержимого типа лого, меню и т.д-->
                 <div class="header__container header__content-container-inner">
                     <!-- Блок для Лого-->
@@ -81,7 +85,9 @@
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--gray-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
                     </div>
-                    <div class="unit unit--theme-foto"></div>
+                    <div class="unit unit--bg-layer-unit unit--theme-foto">
+                        <div class="unit__picture--theme-contr"></div>
+                    </div>
                     <div class="unit unit--bg-layer-unit">
                         <div class="unit unit--theme-info">
                             <h3 class="unit__title unit__title--med-bold unit__title--med-width-h3 unit__title--black-text">General Contracting</h3>
@@ -90,7 +96,9 @@
                         </div>
                         <div class="unit__arrow unit__arrow--left"></div>
                     </div>
-                    <div class="unit unit--theme-foto"></div>
+                    <div class="unit unit--bg-layer-unit unit--theme-foto">
+                        <div class="unit__picture--theme-capital"></div>
+                    </div>
                     <div class="unit unit--theme-info">
                         <div class="unit__fix-padding-unit-with-arrow-hower"></div>
                         <div class="unit__button-arrow-wrap">
@@ -113,7 +121,9 @@
                         </div>
                         <div class="unit__arrow unit__arrow--right"></div>
                     </div>
-                    <div class="unit unit--theme-foto"></div>
+                    <div class="unit unit--bg-layer-unit unit--theme-foto">
+                        <div class="unit__picture--theme-desing"></div>
+                    </div>
                     <div class="unit unit--bg-layer-unit">
                         <div class="unit unit--white">
                             <h3 class="unit__title unit__title--med-bold unit__title--med-width-h3 unit__title--black-text">Capital improvements</h3>
@@ -136,7 +146,9 @@
                         </div>
                     </div>
                     <div class="unit unit--bg-layer-unit">
-                        <div class="unit unit--bg-unit-width959 unit--dark-grey"></div>
+                        <div class="unit unit--bg-unit-width959 unit--dark-grey">
+                            <div class="unit__picture--theme-what"></div>
+                        </div>
                         <div class="unit unit--horizontal-double-unit unit--transparent">
                             <div class="unit__form-search-wrap">
                                 <form class="form">
@@ -156,11 +168,14 @@
                         </div>
                         <p class="unit__article unit__article--centered-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                     </div>
-                    <div class="unit unit--horizontal-double-unit unit--theme-foto">
-                        <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text unit__title--fix-big-width">Your building is in good hands</h2>
-                        <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--black-text unit__article--fix-for-your-buildig-is">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
-                        <input class="button button--theme-unit-btn button--black-bg button--text-white button--fix-btn-about-company" type="button" value="About company">
+                    <div class="unit unit--bg-layer-unit">
+                        <div class="unit__picture--theme-good-hands"></div>
+                        <div class="unit unit--horizontal-double-unit">
+                            <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text unit__title--fix-big-width">Your building is in good hands</h2>
+                            <hr class="unit__horizontal unit__horizontal--black-solid">
+                            <p class="unit__article unit__article--black-text unit__article--fix-for-your-buildig-is">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
+                            <input class="button button--theme-unit-btn button--black-bg button--text-white button--fix-btn-about-company" type="button" value="About company">
+                        </div>
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--soft-gold">
                         <div class="unit__person-info-wrap">
@@ -235,6 +250,7 @@
                         </div>
                     </div>
                     <div class="unit unit--big-bg-layer-unit unit--theme-foto">
+                        <div class="unit__picture--theme-rest"></div>
                         <div class="unit__bottom-right-unit-wrap">
                             <div class="unit unit--theme-info">
                                 <div class="unit__fix-padding-unit-with-arrow-hower"></div>
