Рефакторинг страницы home-page. Применение поворота для символа "/" на 6deg и отступа слева и справа. Изменение размеров шрифта для блоков со слешем

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--letter-spacing4 unit__info--black-text">01</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--letter-spacing2 unit__info--black-text">/03</span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--letter-spacing4 unit__info--black-text">01</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh">/</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--letter-spacing2 unit__info--black-text">03</span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -106,7 +106,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--fix-right-margin4 unit__info--black-text unit__info--letter-spacing1">03</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--black-text"> / 06</span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--fix-right-margin4 unit__info--black-text unit__info--letter-spacing1">03</span><span class="unit__info unit__info--supper unit__info--medium unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium unit__info--black-text">06</span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev-hover">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -259,7 +259,7 @@
                                         <div class="icon icon--arrow-next-inside"></div>
                                     </button>
                                 </div>
-                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text unit__info--fix-right-margin6">01</span><span class="unit__info unit__info--supper unit__info--medium unit__info--letter-spacing1 unit__info--black-text"> / 09</span></div>
+                                <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--black-text unit__info--fix-right-margin6">01</span><span class="unit__info unit__info--supper unit__info--medium unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium unit__info--black-text">09</span></div>
                                 <div class="unit__button-arrow-wrap">
                                     <button class="button button--theme-arrow button--arrow-prev">
                                         <div class="icon icon--arrow-prev-inside"></div>
