Рефакторинг страницы home-page. Подключен локальный шрифт. С ним более похоже на оригинал макета

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>My First web app</title>
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+        <!--link(href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet")-->
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -196,7 +196,14 @@
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--ligthinig-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block41 unit__info--biggest-medium unit__info--dark-grey-text unit__info--letter-spacing1"><span class="unit__info unit__info--condensed-letter">5</span><span class="unit__info unit__info--condensed-letter">5</span><span class="unit__info unit__info--space"></span><span class="unit__info unit__info--condensed-letter">0</span><span class="unit__info unit__info--condensed-letter">0</span><span class="unit__info unit__info--condensed-letter">0</span></span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Expert Witness</span>
+                        </div><span class="unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">55 000</span>
+                        <!--span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1-->
+                        <!--    span.unit__info.unit__info--condensed-letter 5-->
+                        <!--    span.unit__info.unit__info--condensed-letter 5-->
+                        <!--    span.unit__info.unit__info--space-->
+                        <!--    span.unit__info.unit__info--condensed-letter 0-->
+                        <!--    span.unit__info.unit__info--condensed-letter 0-->
+                        <!--    span.unit__info.unit__info--condensed-letter 0--><span class="unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Expert Witness</span>
                     </div>
                     <div class="unit unit--theme-foto">
                         <div class="icon icon--blue-square">
