Рефакторинг страницы home-page. Блоки с цифрами

--- a/app/index.html
+++ b/app/index.html
@@ -196,21 +196,14 @@
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--ligthinig-blue"></div>
                             </div>
-                        </div><span class="unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">55 000</span>
-                        <!--span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1-->
-                        <!--    span.unit__info.unit__info--condensed-letter 5-->
-                        <!--    span.unit__info.unit__info--condensed-letter 5-->
-                        <!--    span.unit__info.unit__info--space-->
-                        <!--    span.unit__info.unit__info--condensed-letter 0-->
-                        <!--    span.unit__info.unit__info--condensed-letter 0-->
-                        <!--    span.unit__info.unit__info--condensed-letter 0--><span class="unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Expert Witness</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Expert Witness</span>
                     </div>
                     <div class="unit unit--theme-foto">
                         <div class="icon icon--blue-square">
                             <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--raindrop"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing1"><span class="unit__info unit__info--condensed-letter">1</span><span class="unit__info unit__info--condensed-letter">2</span><span class="unit__info unit__info--condensed-letter">4</span><span class="unit__info unit__info--space"></span><span class="unit__info unit__info--condensed-letter">6</span><span class="unit__info unit__info--condensed-letter">0</span><span class="unit__info unit__info--condensed-letter">0</span></span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Construction</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Construction</span>
                     </div>
                     <div class="unit unit--theme-blue">
                         <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--letter-spacing018 unit__title--white-text">News</h2>
@@ -238,14 +231,14 @@
                             <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--setting-tool-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing1"><span class="unit__info unit__info--condensed-letter">1</span><span class="unit__info unit__info--condensed-letter">8</span><span class="unit__info unit__info--space"></span><span class="unit__info unit__info--condensed-letter">0</span><span class="unit__info unit__info--condensed-letter">0</span><span class="unit__info unit__info--condensed-letter">0</span></span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Procurement</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Procurement</span>
                     </div>
                     <div class="unit unit--white">
                         <div class="icon icon--blue-square">
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--light-bulb"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing1"><span class="unit__info unit__info--condensed-letter">7</span><span class="unit__info unit__info--condensed-letter">8</span><span class="unit__info unit__info--space"></span><span class="unit__info unit__info--condensed-letter">1</span><span class="unit__info unit__info--condensed-letter">5</span><span class="unit__info unit__info--condensed-letter">0</span></span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Project Managments</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-regular unit__info--letter-spacing2 unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-regular unit__info--letter-spacing03 unit__info--grey-text">Project Managments</span>
                     </div>
                     <div class="unit unit--vertical-double-unit unit--white">
                         <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text unit__title--uppercase-disabled unit__title--fix-for-contemporary-vila">Contemporary Villa</h2>
