Рефакторинг страницы home-page. Подмена шрифта на всей странице

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--letter-spacing4 unit__info--black-text">01</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh">/</span><span class="unit__info unit__info--supper unit__info--medium23 unit__info--letter-spacing2 unit__info--black-text">03</span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-regular unit__info--letter-spacing4 unit__info--black-text">01</span><span class="unit__info unit__info--supper unit__info--medium-regular unit__info--letter-spacing2 unit__info--black-text">/03</span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -76,7 +76,7 @@
                                 <div class="icon icon--theme-circle-bg">
                                     <div class="icon icon--theme-play-arrow"></div>
                                 </div>
-                            </button><span class="unit__info unit__info--small-medium unit__info--white-text unit__info--uppercase">Company video</span>
+                            </button><span class="unit__info unit__info--small-regular unit__info--letter-spacing03 unit__info--white-text unit__info--uppercase">Company video</span>
                         </div>
                     </div>
                     <div class="unit"></div>
@@ -106,7 +106,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--fix-right-margin4 unit__info--black-text unit__info--letter-spacing1">03</span><span class="unit__info unit__info--supper unit__info--medium unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium unit__info--black-text">06</span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-regular unit__info--fix-right-margin4 unit__info--black-text unit__info--letter-spacing1">03</span><span class="unit__info unit__info--supper unit__info--medium-regular unit__info--black-text unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium-regular unit__info--black-text">06</span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev-hover">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -134,7 +134,7 @@
                     </div>
                     <div class="unit unit--theme-yellow">
                         <div class="unit__download-price-wrap">
-                            <div class="icon icon--theme-pdf"></div><span class="unit__info unit__info--small-medium unit__info--black-text unit__info--uppercase">Download price</span>
+                            <div class="icon icon--theme-pdf"></div><span class="unit__info unit__info--small-regular unit__info--letter-spacing03 unit__info--black-text unit__info--uppercase">Download price</span>
                         </div>
                     </div>
                     <div class="unit unit--theme-blue">
@@ -142,7 +142,7 @@
                             <div class="icon icon--theme-contact-circle">
                                 <div class="icon icon--theme-contact-circle-bg"></div>
                             </div>
-                            <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-medium unit__info--white-text unit__info--uppercase">Contact us</span>
+                            <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-regular unit__info--letter-spacing03 unit__info--white-text unit__info--uppercase">Contact us</span>
                         </div>
                     </div>
                     <div class="unit unit--bg-layer-unit">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--white">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Martin H. Jhonsons</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold unit__info--black-text">Martin H. Jhonsons</span>
                             <div class="unit__person-rate-inline-wrap">
                                 <div class="icon icon--person-rate4"></div>
                                 <div class="icon icon--person-rate1none"></div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--soft-gold">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Tony SH. Schults</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold unit__info--black-text">Tony SH. Schults</span>
                             <div class="unit__person-rate-inline-wrap">
                                 <div class="icon icon--person-rate5"></div>
                             </div>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="unit unit--white">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">David Mc. Adams</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold unit__info--black-text">David Mc. Adams</span>
                             <div class="unit__person-rate-inline-wrap">
                                 <div class="icon icon--person-rate4"></div>
                                 <div class="icon icon--person-rate1none"></div>
@@ -259,7 +259,7 @@
                                         <div class="icon icon--arrow-next-inside"></div>
                                     </button>
                                 </div>
-                                <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--black-text unit__info--fix-right-margin6">01</span><span class="unit__info unit__info--supper unit__info--medium unit__info--letter-spacing2 unit__info--black-text unit__info--rotated-slesh unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium unit__info--black-text">09</span></div>
+                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-regular unit__info--black-text unit__info--fix-right-margin6">01</span><span class="unit__info unit__info--supper unit__info--medium-regular unit__info--black-text unit__info--left-right-margin5">/</span><span class="unit__info unit__info--supper unit__info--medium-regular unit__info--black-text">09</span></div>
                                 <div class="unit__button-arrow-wrap">
                                     <button class="button button--theme-arrow button--arrow-prev">
                                         <div class="icon icon--arrow-prev-inside"></div>
@@ -271,7 +271,7 @@
                     <div class="unit unit--vertical-double-bg-layer-unit">
                         <div class="unit unit--theme-yellow">
                             <div class="unit__download-price-wrap">
-                                <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-medium unit__info--black-text unit__info--uppercase">Work with us</span>
+                                <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-regular unit__info--letter-spacing03 unit__info--black-text unit__info--uppercase">Work with us</span>
                             </div>
                         </div>
                         <div class="unit unit--theme-blue">
